--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
-body
+body{
   font-size: 14px;
 }
 
 nav {
-  background color: yellow;
+  background-color: yellow;
   height: 100px;
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+}
 
 section {
   margin: 0 auto;
@@ -16,13 +16,13 @@ section {
 }
 
 h1 {
-  font-family sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
 }
 
-.example, h3 {
+h1, h3 {
   padding-top: 30px;
-  text-align center
+  text-align: center;
 }
 
 h3 {
@@ -34,3 +34,8 @@ h3 {
   height: 100px;
   margin 10px 0;
   width: 100%;
+}
+
+#last3 {
+  background-color: blue;
+}
